--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ input[type="checkbox"] {
 }
 
 .tick::before {
-  content: '\\';
+  content: 'X';
   font-size: 20px;
   display: none;
 }
@@ -113,4 +113,27 @@ input[type="text"] {
   padding: 10px;
   border-radius: 4px;
   border: 3px solid #333;
+}
+
+.empty-state {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  display: none;
+}
+
+.checklist-icon {
+  margin-bottom: 20px;
+}
+
+.empty-state__title, .empty-state__description {
+  margin-bottom: 20px;
+}
+
+.todo-list:empty {
+  display: none;
+}
+
+.todo-list:empty + .empty-state {
+  display: flex;
 }
